# QtSearcher

./: .gitignore  .travis.yml  LICENSE  README.md
src/: CMakeLists.txt  helpers.cpp  helpers.h  qtsearcher.cpp  qtsearcher.h  statuswindow.cpp  statuswindow.h
